# nitro-generator

./: Cargo.toml  README.md  proxies.txt
.github/workflows/: rust.yml
src/: code.rs  http.rs  input.rs  main.rs  menu.rs  output.rs  proxy.rs  settings.rs
src/utils/: code_gen.rs
