[package]
name = "moznazacinam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.6.5"
serde = { version = "1.0.139", features = ["derive"] }
colored = "2"
chrono = "0.4"